# cpp

./: README.implementation_status  README.md  parser.h
Build_process/generic/: Makefile  run.sh  test1.cc
Build_process/modules/: Makefile
Build_process/prebuild_postbuild/: Makefile  README
Eigen/: Makefile
Eigen/eigenvalues/: test1.cc
Eigen/invert/: Makefile
MPI/Eigen/: Makefile  compile  test1.cc
algorithms/crc/: Makefile  crc32.cc  test  test_empty  test_hex_00000000  test_hex_00000000x2  test_hex_12345678  test_hex_78563412  test_hex_78563412x2
asio/scpi1/: README  server.cc
asio/scpi2/: Makefile  README  server.cc
asio/scpi3/: README  server.cc
asio/scpi4/: README  server.cc
asio/scpi5/: README  scpi_server.hpp  server.cc
asio/scpi6/: README  scpi_server.hpp  server.cc  test.cc
asio/stream/: README  server.cc
c++20/: Makefile  go-gcc
c++20/bit/: Makefile  (+2 more)
c++23/: README
classes/: Makefile  test1.cc
cmake/: README
cmake/directories/src/: CMakeLists.txt
concepts_c++17/: Makefile  README  test1.cc
fmt/: Makefile  test1.cc
future/: test1.cc
googletest/: Makefile  test1.cc
hardware_concurrency/: Makefile  test1.cc
int_parser/: Makefile  test1.cc  test2.cc
mdspan/: Makefile  test1.cc
nested_classes/: Makefile  test1.cc
quadrature/: Makefile  test1.cc
quadruple/: Makefile  README  test1.cc
range-v3/: Makefile  test1.cc
sha256/: Makefile  README  file1  file2  file3  file4  test1.cc  test2.cc
shared_future/: test1.cc
syslog/: 51-rok.conf  Makefile  README  log.cc  log.h  test1.cc
thread/: Makefile  test1.cc
(+237 files in other folders)
